Fix contact page to eliminate horizontal overflow

--- a/resources/style/contact.css
+++ b/resources/style/contact.css
@@ -90,7 +90,7 @@ main {
 @media only screen and (orientation: portrait){
     main {
         display: grid;
-        grid-template-columns: 1fr 600px;
+        grid-template-columns: 1fr 3fr;
     }
 
     #bobblestore {
@@ -105,6 +105,7 @@ main {
 
     .platform-info {
         grid-column: 2;
+        width: 90%;
     }
 }
 
